--- a/CSS/contactUs.css
+++ b/CSS/contactUs.css
@@ -64,7 +64,7 @@
   
   .contact .contact-info-item .icon .fa{
     font-size: 25px;
-    color: var(--bs-blue);
+    color: #3a389b;
   }
   
   .contact .contact-info-item h4{
