--- a/CSS/aboutUS.css
+++ b/CSS/aboutUS.css
@@ -183,6 +183,83 @@ align-items: center;
 flex-wrap: wrap; 
 }
 
+/*** Project Start ***/
+
+.project-img {
+  position: relative;
+  padding: 15px;
+  overflow: hidden;
+}
+
+.project-img img {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+}
+
+.project-img::before {
+  content: "";
+  position: absolute;
+  width: 150px;
+  height: 150px;
+  top: 0;
+  left: 0;
+  background: #3a389b;
+  border-radius: 10px;
+  opacity: 1;
+  z-index: -1;
+  transition: .5s;
+}
+
+.project-img::after {
+  content: "";
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  background: var(--bs-primary);
+  border-radius: 10px;
+  opacity: 1;
+  z-index: -1;
+  transition: .5s;
+}
+
+.project-content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+}
+
+.project-content a {
+  display: inline-block;
+  padding: 20px 25px;
+  background: #ecedee;
+  border-radius: 10px;
+  text-decoration: none; /* Remove underline on hover */
+}
+
+.project-item:hover .project-content {
+  opacity: 1;
+  transition: .5s;
+}
+
+.project-item:hover .project-img::before,
+.project-item:hover .project-img::after {
+  opacity: 0;
+}
+
+.project-item:hover h4{
+  color: #3a389b;
+}
+
+/*** Project End ***/
 .col-lg-5 .position-relative {
 min-height: 300px; 
 }
