--- a/CSS/productDetail.css
+++ b/CSS/productDetail.css
@@ -11,3 +11,9 @@
     background-color: #212529;
     color: white;
 }
+
+/* @media (max-width: 992px) {
+    .display-5{
+        text-align: center !important;
+    }
+} */
