--- a/CSS/all.css
+++ b/CSS/all.css
@@ -126,13 +126,13 @@ section {
 .header-main {
   display: flex;
   justify-content: center;
-  align-items: center; 
-  background-image: url('/img/LogoWBack.jpg');
+  align-items: center;
+  background-image: url("/img/LogoWBack.jpg");
   background-size: cover;
-  background-position: top; 
-  background-repeat: no-repeat; 
-  width: 100%; 
-  min-height: 40vh; 
+  background-position: top;
+  background-repeat: no-repeat;
+  width: 100%;
+  min-height: 40vh;
   position: relative;
 }
 
@@ -264,11 +264,10 @@ footer {
   width: 100%;
 }
 
-
 @media (max-width: 992px) {
   footer {
     z-index: 1000;
-}
+  }
 
   .navbar-collapse {
     text-align: center;
@@ -277,12 +276,18 @@ footer {
 
 @media (max-width: 576px) {
   footer img {
-      max-width: 80px;
+    max-width: 80px;
   }
 }
 
 .fixed-img {
-  height: 200px; 
-  object-fit: cover; 
-  width: 100%; 
+  height: 200px;
+  object-fit: cover;
+  width: 100%;
+}
+
+@media (max-width: 575.98px) {
+  body {
+    overflow-x: hidden;
+  }
 }
