--- a/html/component/menu.html
+++ b/html/component/menu.html
@@ -1,6 +1,6 @@
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
@@ -10,9 +10,8 @@
 
 <nav id="header" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             Menu
         </button>
@@ -51,10 +50,10 @@
                         DỊCH VỤ AN NINH
                     </a>
                     <ul class="text-center dropdown-menu">
-                        <li><a class="dropdown-item" href="/html/product/product.html?thietBiCanhBao">
-                                Thiết bị giám sát</a></li>
                         <li><a class="dropdown-item" href="/html/Security/security.html">
                                 Dịch vụ an ninh</a></li>
+                        <li><a class="dropdown-item" href="/html/product/product.html?thietBiCanhBao">
+                                Thiết bị giám sát</a></li>
                     </ul>
                 </li>
                 <li class="nav-item"><a class="nav-link pd" href="/html/buildingServices/bms.html">DỊCH VỤ KỸ
