Thay đổi nút chỉnh màu sắc

--- a/html/component/menu.html
+++ b/html/component/menu.html
@@ -26,8 +26,10 @@
                     <ul class="text-center dropdown-menu">
                         <li><a class="dropdown-item" href="/html/solution/solution.html?thietBiQuanTrac">
                                 Dịch vụ quan trắc khí tượng thủy văn</a></li>
+                        <li><a class="dropdown-item" href="http://wsm.aks.vn/dang-nhap">
+                                Hệ thống giám sát trạm dữ liệu</a></li>
                         <li><a class="dropdown-item" href="/html/product/product.html?thietBiQuanTrac">
-                                Thiết bị giám sát - điều khiển trạm dữ liệu</a></li>
+                                Thiết bị giám sát - điều khiển trạm dữ liệu</a></li>                                
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
