--- a/html/component/footer.html
+++ b/html/component/footer.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="/html/CSS/all.css">
+    <link rel="stylesheet" href="CSS/all.css">
 </head>
 <body class="d-flex flex-column min-vh-100">
     <main class="flex-grow-1">
@@ -26,12 +26,12 @@
             <!-- Links -->
             <nav class="row mb-2">
                 <div class="col d-flex flex-wrap justify-content-center">
-                    <a href="/html/aboutUs.html" class="mx-2 text-dark text-decoration-none">Giới thiệu</a>
-                    <a href="/html/product/product.html?thietBiQuanTrac" class="mx-2 text-dark text-decoration-none">Dịch vụ quan trắc khí tượng thủy văn</a>
-                    <a href="/html/solution/solution.html?giaiPhapBaoChay" class="mx-2 text-dark text-decoration-none">Hệ thống phòng cháy chữa cháy</a>
-                    <a href="/html/Security/security.html" class="mx-2 text-dark text-decoration-none">Dịch vụ an ninh</a>
-                    <a href="/html/buildingServices/bms.html" class="mx-2 text-dark text-decoration-none">Dịch vụ kỹ thuật tòa nhà</a>
-                    <a href="/html/Contact.html" class="mx-2 text-dark text-decoration-none">Liên hệ</a>
+                    <a href="aboutUs.html" class="mx-2 text-dark text-decoration-none">Giới thiệu</a>
+                    <a href="product/product.html?thietBiQuanTrac" class="mx-2 text-dark text-decoration-none">Dịch vụ quan trắc khí tượng thủy văn</a>
+                    <a href="solution/solution.html?giaiPhapBaoChay" class="mx-2 text-dark text-decoration-none">Hệ thống phòng cháy chữa cháy</a>
+                    <a href="Security/security.html" class="mx-2 text-dark text-decoration-none">Dịch vụ an ninh</a>
+                    <a href="buildingServices/bms.html" class="mx-2 text-dark text-decoration-none">Dịch vụ kỹ thuật tòa nhà</a>
+                    <a href="Contact.html" class="mx-2 text-dark text-decoration-none">Liên hệ</a>
                 </div>
             </nav>
 
@@ -52,12 +52,12 @@
             <!-- Certification Logo -->
             <div class="row">
                 <div class="col">
-                    <img src="/html/img/logo-ask-removebg-preview.png" alt="AKS VietNam Logo" class="img-fluid" style="max-width: 100px;">
+                    <img src="img/logo-ask-removebg-preview.png" alt="AKS VietNam Logo" class="img-fluid" style="max-width: 100px;">
                 </div>
             </div>
         </div>
     </footer>
-    <script defer src="/html/js/All/all.js"></script>
+    <script defer src="js/All/all.js"></script>
     <script>
         document.getElementById("year").textContent = new Date().getFullYear();
     </script>
