--- a/html/CSS/all.css
+++ b/html/CSS/all.css
@@ -127,7 +127,7 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url("/html/img/LogoWBack.jpg");
+  background-image: url("img/LogoWBack.jpg");
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
